src/test/ui/rfc-2005-default-binding-mode/explicit-mut.stderr
error[E0594]: cannot assign to `*n` which is behind a `&` reference
  --> $DIR/explicit-mut.rs:7:13
   |
LL |             *n += 1;
   |             ^^^^^^^ `n` is a `&` reference, so the data it refers to cannot be written

error[E0594]: cannot assign to `*n` which is behind a `&` reference
  --> $DIR/explicit-mut.rs:15:13
   |
LL |             *n += 1;
   |             ^^^^^^^ `n` is a `&` reference, so the data it refers to cannot be written

error[E0594]: cannot assign to `*n` which is behind a `&` reference
  --> $DIR/explicit-mut.rs:23:13
   |
LL |             *n += 1;
   |             ^^^^^^^ `n` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 3 previous errors

